fdo#61167 suggest titlecase and uppercase words from exception dict

Change-Id: I280ffed996814e246ac3e93de5ff0acaad84018c